devel
-----

* now also syncing _jobs and _queues collections in active failover mode

* upgraded lodash to 4.17.11 because of CVE-2018-16487

* `--query.registry-ttl` is now honored in single-server mode, and cursor TTLs
  are now honored on DBServers in cluster mode
  
* add "TTL" index type, for optional auto-expiration of documents 

* disable selection of index types "persistent" and "skiplist" in the web
  interface when using the RocksDB engine. The index types "hash", "skiplist"
  and "persistent" are just aliases of each other with the RocksDB engine,
  so there is no need to offer all of them.

* fixed JS AQL query objects with empty query strings not being recognized 
  as AQL queries

* update V8 to 7.1.302.28

  New V8 behavior introduced herein: 

  - ES2016 changed the default timezone of date strings to be conditional on
    whether a time part is included. The semantics were a compromise approach
    based on web compatibility feedback from V8, but until now, we have been
    shipping ES5.1 default timezone semantics. This patch implements the
    new semantics, following ChakraCore and SpiderMonkey (though JSC
    implements V8's previous semantics).
 

* fixed JS AQL query objects with empty query strings not being recognized as AQL queries

* report run-time openssl version (for dynamically linked executables)

* added greeting warning about maintainer mode

* improve insertion time into non-unique secondary indexes with the RocksDB
  engine

* fixed possible segfault when using COLLECT with a LIMIT and an offset

* fixed COLLECT forgetting top-level variables after 1000 rows

* added sort-limit optimization in AQL; improves memory usage and execution
  time for some queries

* upgraded to OpenSSL 1.1.0j

* added configurable masking of dumped data via `arangodump` tool to obfuscate 
  exported sensible data

* fixed arangoimp script for MacOSX CLI Bundle

* added "peakMemoryUsage" in query results figures, showing the peak memory