@@ -1,6 +1,9 @@
 devel
 -----
 
+* follow up to fix JWT authentication in arangosh (#7530):
+  also fix reconnect
+
 * now also syncing _jobs and _queues collections in active failover mode
 
 * upgraded lodash to 4.17.11 because of CVE-2018-16487
